@@ -14,6 +14,8 @@ Version 0.9.2
 - Ported remaining parts of :class:`~werkzeug.contrib.MemcachedCache` to
   Python 3.3
 - Fixed a deprecation warning in the contrib atom module.
+- Fixed a regression with setting of content types through the
+  headers dictionary instead with the content type parameter.
 
 
 Version 0.9.1
